# transfer-legacy-backend

./: .clippy.toml  .env.example  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DIRECTORY_STRUCTURE.md  README.md  deny.toml  docker-compose.yml  dump.rdb  project_detail.md  vercel.json
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: backup-restore.yml  ci.yml  deploy-vercel.yml  deploy.yml  fuzz.yml  load-test.yml  rules-compliance.yml  security-scan.yml
crates/api/: Cargo.toml
crates/api/examples/: e2e_smoke.rs
crates/api/scratch/: update_secrets.rs
crates/api/src/: config.rs  errors.rs  lib.rs  main.rs  router.rs  state.rs  telemetry.rs
crates/api/src/db/: mod.rs
crates/api/src/db/queries/: app.rs  audit.rs  auth.rs  claims.rs  devices.rs  evidence.rs  inheritance.rs  mfa.rs  mod.rs  notify.rs  ops.rs  stepup.rs  vault.rs
crates/api/src/handlers/: audit.rs  capabilities.rs  gdpr.rs  health.rs  jobs.rs  metrics.rs  mod.rs  openapi.rs
crates/api/src/handlers/app/: cms.rs  config.rs  content.rs  mod.rs  waitlist.rs
crates/api/src/handlers/auth/: login.rs  logout.rs  mod.rs  password.rs  refresh.rs  register.rs  stepup.rs
crates/api/src/handlers/auth/mfa/: mod.rs  totp.rs  webauthn.rs
crates/api/src/handlers/claims/: mod.rs
crates/api/src/handlers/devices/: mod.rs
crates/api/src/handlers/inheritance/: claim_token.rs  envelopes.rs  evidence.rs  heartbeat.rs  invite.rs  mod.rs  policy.rs
crates/api/src/handlers/ops/: admin_mgmt.rs  audit.rs  auth.rs  auth_utils.rs  branding.rs  cms.rs  contact.rs  decision.rs  mod.rs  reviews.rs  storage.rs  waitlist.rs
crates/api/src/handlers/vault/: mod.rs
crates/api/src/middleware/: aead_transport.rs  internal_auth.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs  sentry_layer.rs
crates/api/src/notifications/: brevo.rs  mod.rs  resend.rs
crates/api/src/services/: audit.rs  b2.rs  fraud.rs  hmac.rs  mod.rs  openbao.rs  sessions.rs  signing.rs  supabase.rs
crates/api/src/signing/: mod.rs
crates/api/src/storage/: mod.rs
crates/api/src/tests/: mod.rs  test_utils.rs
crates/api/src/tests/integration/: app.rs  audit_test.rs  auth_test.rs  claim_test.rs  full_stack_notification_test.rs  inheritance_test.rs  mod.rs  ops_auth_test.rs  policy_test.rs  prune_user.rs  release_test.rs  vault_test.rs
crates/api/src/tests/ready_to_transfer/: flows.rs  mod.rs
crates/api/src/tests/security/: aead_tamper_test.rs  clock_skew_test.rs  crypto_version_reject_test.rs  mod.rs  no_server_decrypt_test.rs  replay_test.rs  signature_forgery_test.rs  wrong_recipient_test.rs
crates/crypto-core/: Cargo.toml
crates/crypto-core/examples/: generate_opaque_setup.rs
crates/crypto-core/fuzz/: Cargo.toml
crates/crypto-core/fuzz/fuzz_targets/: fuzz_aead_decrypt.rs  fuzz_envelope_parsing.rs  fuzz_jcs_canonicalization.rs
crates/crypto-core/src/: aead.rs  jcs.rs  lib.rs  memory.rs  opaque.rs  signatures.rs
crates/infra-tool/: Cargo.toml
crates/infra-tool/src/: main.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: crypto_types.rs  errors.rs  lib.rs
crates/shared-types/src/models/: app.rs  attestation.rs  auth.rs  claim.rs  device.rs  inheritance.rs  item.rs  mod.rs  ops.rs  person.rs  policy.rs  release_record.rs  share.rs  (+2 more)
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  dlq.rs  lib.rs  main.rs  queue.rs  scheduler.rs  state.rs
crates/worker/src/jobs/: mod.rs
crates/worker/src/services/: audit.rs  b2.rs  brevo.rs  mod.rs  notify_log.rs  resend.rs
docs/adr/: 001-rust-axum-stack.md  002-openbao-kms-and-secrets.md  003-opaque-over-srp.md  005-supabase-schema-split.md
docs/api/: API_REFERENCE.md
docs/infra/: INSTANCE_SUPPORT_MATRIX.md
docs/observability/: alerts.yaml  grafana-dashboard.json  sentry-alert-rules.md
docs/runbooks/: backup-restore.md  conflict-resolution.md  incident-response.md  manual-review-ops.md
docs/templates/: admin_created.html  brevo-approver-attestation-request.html  brevo-beneficiary-claim-available.html  brevo-conflict-hold-notice.html  brevo-invite-template.html  brevo-owner-reminder-daily.html  brevo-owner-reminder-early.html  brevo-owner-reminder-urgent.html  brevo-password-reset.html  brevo-release-ready.html  conflict_hold_notice.html  owner_reminder_daily.html  owner_reminder_early.html  owner_reminder_urgent.html  register_otp.html  release_ready.html  security_alert.html  waitlist_welcome.html
infra/: Dockerfile  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml
infra/caddy/: Caddyfile
infra/docs/: vps_bootstrap_guide.md
infra/environments/: README.md  local.env.template  production.env.template  staging.env.template
infra/k6/: README.md  auth.js  heartbeat.js  vault-write.js
infra/openbao/: UNSEAL.md  config.hcl  init-transit.sh  policy-api.hcl
infra/profiles/: high-memory.runtime.env  small.runtime.env  standard.runtime.env
infra/scripts/: backup.sh  generate_and_seed.sh  healthcheck.sh  manage_secrets.sh  migrate-local.ps1  restore-test.sh  test-docker.ps1  vault-manager.ps1
migrations/: 0001_create_schemas.sql  0002_auth_ext_tables.sql  0003_vault_tables.sql  0004_inheritance_tables.sql  0005_audit_tables.sql  0006_ops_tables.sql  0007_notify_tables.sql  0010_triggers.sql  0011_audit_anchor_tables.sql  0012_claims_tables.sql  0013_release_records.sql  0014_ops_conflict_manual.sql  0015_audit_append_only.sql  0016_add_policy_label.sql  0017_app_branding_and_waitlist.sql  0018_ops_rbac_schema.sql  0019_ops_activity_and_role_mgmt_upgrades.sql  0020_add_waitlist_and_support_fields.sql  0021_create_contact_system.sql  0022_add_maintenance_and_registration.sql  0023_seed_cms_content.sql  0024_fix_schema_permissions.sql  0025_serverless_db_cron_scheduler.sql
postman/: Transfer-Legacy.postman_collection.json  Transfer-Legacy.postman_environment.json
rules/: api.rules.md  code.rules.md  crypto.rules.md  db.rules.md  git.rules.md  infra.rules.md  security.rules.md
scratch/: gen_hash.rs  reg_req.json  stabilize_request_ids.py
