[package]
name = "transfer-legacy-crypto-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
opaque-ke = { version = "4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
bincode = "1"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
serde_jcs = "0.1"
zeroize = { version = "1", features = ["derive"] }
