[package]
name = "transfer-legacy-worker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
apalis = "0.5"
apalis-redis = "0.5"
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio-cron-scheduler = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

transfer-legacy-shared-types = { path = "../shared-types" }
transfer-legacy-crypto-core = { path = "../crypto-core" }
