[package]
name = "transfer-legacy-worker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
apalis = "0.5.3"
apalis-redis = "0.5.3"
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
handlebars = "6.2.0"
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio-cron-scheduler = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.23"
dotenvy = "0.15"
nix = { version = "0.29", features = ["mman"] }
redis = { version = "0.25", features = ["tokio-comp", "tokio-rustls-comp"] }

transfer-legacy-shared-types = { path = "../shared-types" }
transfer-legacy-crypto-core = { path = "../crypto-core" }
