[package]
name = "transfer-legacy-crypto-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
serde_json = "1"
transfer-legacy-crypto-core = { path = ".." }

[[bin]]
name = "fuzz_envelope_parsing"
path = "fuzz_targets/fuzz_envelope_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jcs_canonicalization"
path = "fuzz_targets/fuzz_jcs_canonicalization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_aead_decrypt"
path = "fuzz_targets/fuzz_aead_decrypt.rs"
test = false
doc = false
bench = false
